# learning-github-actions

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: c-cpp.yml
include/: sperr_helper.h
src/: CMakeLists.txt
